# vibevidz

./: .gitignore  .gitmodules  CMakeLists.txt  GEMINI.md  README.md  meson.build
src/: MainWindow.cpp  MainWindow.h  ProjectMWidget.cpp  ProjectMWidget.h  main.cpp
